SP Execution adjusts
